--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@chakra-ui/react": "^2.8.2",
     "@emailjs/browser": "^4.1.0",
+    "@emotion/react": "^11.11.4",
+    "@emotion/styled": "^11.11.5",
     "@react-three/drei": "^9.97.3",
     "@react-three/fiber": "^8.15.16",
-    "framer-motion": "^11.0.3",
+    "framer-motion": "^11.0.25",
     "maath": "^0.10.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
